[package]
name = "oas-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
dotenv = "0.15.0"
eyre = "0.6.12"
mongodb = {version = "3.0.0", default-features = true}
serde_json = "1.0.120"
tokio = { version =  "1.39.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
